# ChangeLog for sci-libs/blas-atlas
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.95 2010/01/29 04:44:54 markusle Exp $

  29 Jan 2010; Markus Dittrich <markusle@gentoo.org>
  blas-atlas-3.9.21.ebuild:
  Updated version of shared libs patch to make sure we don't use
  libtool for linking executables (fixes #302235).

  23 Jan 2010; Markus Dittrich <markusle@gentoo.org>
  blas-atlas-3.9.21.ebuild:
  Added a short message regarding libtool (see bug #279920).

  23 Jan 2010; Markus Dittrich <markusle@gentoo.org>
  blas-atlas-3.9.21.ebuild:
  Fixed bug in libtoolized Makefile (fixes #301827).

*blas-atlas-3.9.21 (21 Jan 2010)

  21 Jan 2010; Markus Dittrich <markusle@gentoo.org>
  blas-atlas-3.9.3.ebuild, +blas-atlas-3.9.21.ebuild:
  Version bump (fixes bug #281688).

  22 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  blas-atlas-3.9.3.ebuild:
  Use emake -j1 for build, bug #294172.

  14 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org> files/blas.pc.in,
  files/cblas.pc.in, blas-atlas-3.9.3.ebuild:
  Now pkg-config files link to the atlas dirs, also fixed cblas and blas
  requires

  23 Sep 2008; Sébastien Fabbro <bicatali@gentoo.org>
  files/eselect.cblas.threaded-atlas:
  Fixed a cblas link in the threaded-atlas profile

  05 Sep 2008; Sébastien Fabbro <bicatali@gentoo.org>
  -files/3.7.11-allow-any-gcc-version.patch,
  -files/blas-atlas-3.9.1-Core2Duo-detect.patch,
  -files/3.6.0-ppc-configure.patch, -files/3.7.11-ppc-configure.patch,
  -files/blas-atlas-3.9.1-timing.patch, -files/c-ATLAS,
  -files/c-threaded-ATLAS, -files/eselect.blas, -files/eselect.cblas,
  -files/f77-ATLAS, -files/f77-threaded-ATLAS,
  -files/gnuc_default_fix.patch, -files/unbuffered.patch,
  -blas-atlas-3.6.0-r1.ebuild, -blas-atlas-3.6.0-r2.ebuild,
  -blas-atlas-3.7.11.ebuild, -blas-atlas-3.7.11-r1.ebuild,
  -blas-atlas-3.9.2.ebuild:
  Removed old versions
