@@ -18,7 +18,8 @@ DIST atlas3.9.21.tar.bz2 4839903 RMD160 366f6d3e8c5d1071db82b60d6b728fcca389396b
 DIST atlas3.9.3.tar.bz2 4625874 RMD160 1739e67d9f5f597ceb4a63093bc619bb173b0171 SHA1 b56438eda01f09999e20b2fc99523cc205b8b905 SHA256 6ef284a74330208b2560a1b52284300ef5f77132826c1caaaf9a9241bf4434a0
 EBUILD blas-atlas-3.8.0.ebuild 7083 RMD160 1827b6744cc4813b28c4574fbf92a167eb5b3e9f SHA1 d490044d1d1f3f64572d96684263fd41ee9db02d SHA256 51d0feea9e1204ef713f0af41ea598766f2c8bda2041030272f711dac631bc2f
 EBUILD blas-atlas-3.8.2.ebuild 6789 RMD160 9c0d1073ec2852f0a77c7806788f4b24f41ff653 SHA1 5fe455b7ed37aaeed31234e1caa83fb317fa0846 SHA256 236eb6d98fa5293799b331989632ad0e9c3f19df5a33a886806bceee68902b5a
+EBUILD blas-atlas-3.9.21-r1.ebuild 7955 RMD160 35c3bb3319988d8fb923364b0899a0fa49473b4e SHA1 c2be1bcc50b00be29d9b93ca364042f26b38b711 SHA256 cc2d95849caf3b61b95c016374153db60f8b262968e68fe7be973ce0d1fb1fc8
 EBUILD blas-atlas-3.9.21.ebuild 7921 RMD160 be86a660a3e278497174cd77fff9290c5054f03a SHA1 4d5eaf86c5ab12bdbbb1352cadd9c6252e545f72 SHA256 d55721214d2e52ad5a5f025ebbaa08091ded77c3b69648589576e87c3483ed17
 EBUILD blas-atlas-3.9.3.ebuild 7501 RMD160 39fa880f35bb7d6f4d22c43334d4e12ac7e6a918 SHA1 4d1f74c3a854eb247e7119aee20e3306ea67f2cf SHA256 565ed3930afc55162b10fc25c56e2a9777a1b2c4add7bde4626fe6e7900119f8
-MISC ChangeLog 19773 RMD160 803bb8f9f8967ebf9331b6af3313f152cc5c98dc SHA1 75a6543b83f5605203e28d8dfa238577437bde78 SHA256 10f965a6ec0e8b9a9dc3630c554df9b16cc76543502e0a7e82e977fe7ddbc560
+MISC ChangeLog 19964 RMD160 8dfa76e103aa9a927ef55a39320d9f6fe373f60e SHA1 512a198a3f5235f547d341628edd25626a27d4bb SHA256 2aa162c82b7d469e5f0f54228086940cf78788e4b9106c4e6016ae006bf37e11
 MISC metadata.xml 156 RMD160 dc078172bfebcb25d69bdf8731714f9cce9d3e36 SHA1 da2b240a255820145b7c83a5c48e45b96b7e9ee6 SHA256 5d22100902db7507a5b5493dd4a66cdb08025faf80a2c0b75e6392315c47f900
