@@ -1,6 +1,12 @@
 # ChangeLog for sci-libs/blas-atlas
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.95 2010/01/29 04:44:54 markusle Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.96 2010/02/06 17:08:34 markusle Exp $
+
+*blas-atlas-3.9.21-r1 (06 Feb 2010)
+
+  06 Feb 2010; Markus Dittrich <markusle@gentoo.org>
+  +blas-atlas-3.9.21-r1.ebuild:
+  New revision installs missing atlas_aux.h header (fixes #302951).
 
   29 Jan 2010; Markus Dittrich <markusle@gentoo.org>
   blas-atlas-3.9.21.ebuild:
